--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -1,4 +1,4 @@
-one:
+project_one:
   title: My Wonderful Project
   slug: my-wonderful-project
   description: This is the description of my wonderful project
@@ -6,7 +6,9 @@ one:
   priority: primary
   position: 1
   published: true
-two:
+  tags: tag_two,tag_fifteen,tag_twentyone
+
+project_two:
   title: My second awesome project
   slug: my-second-awesome-project
   description: "I can't make you wait, lokk at the awesome content!"
